--- a/css/index.css
+++ b/css/index.css
@@ -1222,8 +1222,6 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
         top: 0;
         background-color: white;
         z-index: 100;
-        overflow-y: scroll;
-        overflow-x: hidden;
     }
 
     header .mobile_gnb .mobile_join {
@@ -1238,15 +1236,15 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
         position: relative;
     }
 
-    header .mobile_gnb .mobile_join figure {
+    header .mobile_gnb .mobile_join li:last-child {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 20px;
         height: 20px;
-        position: fixed;
+        position: absolute;
         top: 0;
-        right: 80%;
+        left: -20px;
         border-right: 1px solid #e1e3e4;
         background-color: white;
     }
@@ -1264,9 +1262,12 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
 
     header .mobile_gnb .gnb {
         width: 100%;
+        height: 100%;
         margin: 0 auto;
         padding: 10px 0;
         position: relative;
+        overflow-x: hidden;
+        overflow-y: scroll;
     }
 
     header .mobile_gnb .gnb .depth01:nth-child(5) {
@@ -1314,11 +1315,11 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
 
     header .mobile_gnb .gnb .depth01 .depth02 {
         display: block;
-        width: calc(100% / 2);
-        height: 100%;
-        position: absolute;
+        width: calc(80% / 2);
+        height: calc(100vh - 50px);
+        position: fixed;
         right: 0;
-        top: 0;
+        top: 50px;
         background-color: #231f20;
         padding: 10px 0;
         overflow-y: scroll;
