--- a/css/index.css
+++ b/css/index.css
@@ -1175,24 +1175,8 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
 
 
 
-
-/* -------------------------------------------------------------------- */
-/* mobile 960px */
-/* -------------------------------------------------------------------- */
-
-@media screen and (max-width:960px) {
-
-    h2,
-    .cont02 .frame h2 {
-        margin-bottom: 30px;
-    }
-
-    .cont01,
-    .cont02,
-    .cont03 {
-        padding: 50px 0;
-    }
-
+@media screen and (max-width:1024px) {
+    
     header {
         height: 50px;
     }
@@ -1390,9 +1374,33 @@ footer nav .f_gnb .f_depth01 .f_depth02 li {
         display: block;
     }
 
+    /* -------------------------------------------------------------------- */
+    /* main_visual */
+
     .main_visual {
         max-height: calc(100vh - 50px);
         margin: 50px auto 0;
+    }
+}
+
+
+
+
+/* -------------------------------------------------------------------- */
+/* mobile 960px */
+/* -------------------------------------------------------------------- */
+
+@media screen and (max-width:960px) {
+
+    h2,
+    .cont02 .frame h2 {
+        margin-bottom: 30px;
+    }
+
+    .cont01,
+    .cont02,
+    .cont03 {
+        padding: 50px 0;
     }
 
     /* -------------------------------------------------------------------- */
