--- a/css/index.css
+++ b/css/index.css
@@ -188,15 +188,18 @@ header .pc_join li a:hover:after {
 /* main_visual */
 
 .main_visual {
-    max-height: calc(100vh - 80px);
+    /* max-height: calc(100vh - 80px); */
+    max-height: calc(930px - 80px);
     height: 56.25vw;
     margin: 80px auto 0;
     background-color: black;
 }
 
 .main_visual .youtube {
+    max-width: 1920px;
     width: 100%;
     height: 100%;
+    margin: 0 auto;
     position: relative;
 }
 
